--- a/sass/_activities.sass
+++ b/sass/_activities.sass
@@ -64,6 +64,10 @@
 				+areg
 				color: #00BFBC 
 				width: 160px 
+				white-space: nowrap
+				.a__sign
+					float: left
+					margin-left: 10px 
 				strong
 					font-weight: normal
 					+asemi
